SERVER-16673 KVCCE no longer tries to remove indexes that don't exist