src/mongo/db/storage/kv/kv_collection_catalog_entry.cpp
@@ -118,9 +118,13 @@ namespace mongo {
 
     Status KVCollectionCatalogEntry::removeIndex( OperationContext* txn,
                                                   const StringData& indexName ) {
-        string ident = _catalog->getIndexIdent( txn, ns().ns(), indexName );
-
         MetaData md = _getMetaData( txn );
+        
+        if (md.findIndexOffset(indexName) < 0)
+            return Status::OK(); // never had the index so nothing to do.
+
+        const string ident = _catalog->getIndexIdent( txn, ns().ns(), indexName );
+
         md.eraseIndex( indexName );
         _catalog->putMetaData( txn, ns().toString(), md );
 
